--- a/source/lightcrafts/locale/com/lightcrafts/image/metadata/EXIFTags.properties
+++ b/source/lightcrafts/locale/com/lightcrafts/image/metadata/EXIFTags.properties
@@ -93,8 +93,8 @@
 0111=Strip offsets-X
 
 0112=Orientation
-0112>1=landscape
-0112>2=seascape
+0112>1=normal
+0112>2=h. flip
 0112>3=rotated 180
 0112>4=v. flip
 0112>5=90 CW + h. flip
@@ -205,6 +205,10 @@
 9208>17=standard light A
 9208>18=standard light B
 9208>19=standard light C
+9208>20=D55
+9208>21=D65
+9208>22=D75
+9208>23=D50
 9208>24=ISO studio tungsten
 9208>255=other
 
