--- a/source/lightcrafts/locale/com/lightcrafts/image/metadata/makernotes/PentaxTags.properties
+++ b/source/lightcrafts/locale/com/lightcrafts/image/metadata/makernotes/PentaxTags.properties
@@ -42,7 +42,21 @@
 0008>4=RAW
 
 0009=Image size
+0009>0=640 x 480
 0009>1=full
+0009>2=1024 x 768
+0009>3=1280 x 960
+0009>4=1600 x 1200
+0009>5=2048 x 1536
+0009>8=2560 x 1920
+0009>19=320 x 240
+0009>21=2592 x 1944
+0009>22=2304 x 1728
+0009>8194=960 x 640
+0009>8450=1152 x 768
+0009>8706=1536 x 1024
+0009>8961=2400 x 1600
+0009>9216=3008 x 2008
 
 000B=Picture mode
 000B>0=program
@@ -97,6 +111,30 @@
 0013=F-number
 
 0014=ISO
+0014>3=50
+0014>4=64
+0014>5=80
+0014>6=100
+0014>7=125
+0014>8=160
+0014>9=200
+0014>10=250
+0014>11=320
+0014>12=400
+0014>13=500
+0014>14=640
+0014>15=800
+0014>16=1000
+0014>17=1250
+0014>18=1600
+0014>21=3200
+0014>50=50
+0014>100=100
+0014>200=200
+0014>400=400
+0014>800=800
+0014>1600=1600
+0014>3200=3200
 
 0016=Exposure compensation
 
@@ -310,6 +348,96 @@
 003F>256=K,M
 003F>512=A Series
 003F>768=Sigma
+003F>785=SMC Pentax-FA soft 85mm F2.8
+003F>786=SMC Pentax-F 1.7X AF adapter
+003F>787=SMC Pentax-F 24-50mm F4
+003F>788=SMC Pentax-F 35-80mm F4-5.6
+003F>789=SMC Pentax-F 80-200mm F4.7-5.6
+003F>790=SMC Pentax-F FISH-EYE 17-28mm F3.5-4.5
+003F>791=SMC Pentax-F 100-300mm F4.5-5.6
+003F>792=SMC Pentax-F 35-135mm F3.5-4.5
+003F>793=SMC Pentax-F 35-105mm F4-5.6
+003F>794=SMC Pentax-F* 250-600mm F5.6 ED[IF]
+003F>795=SMC Pentax-F 28-80mm F3.5-4.5
+003F>796=SMC Pentax-F 35-70mm F3.5-4.5
+003F>797=Pentax-F 28-80mm F3.5-4.5
+003F>798=Pentax-F 70-200mm F4-5.6
+003F>799=SMC Pentax-F 70-210mm F4-5.6
+003F>800=SMC Pentax-F 50mm F1.4
+003F>801=SMC Pentax-F 50mm F1.7
+003F>802=SMC Pentax-F 135mm F2.8 [IF]
+003F>803=SMC Pentax-F 28mm F2.8
+003F>804=Sigma 20mm F1.8 EX DG aspherical RF
+003F>806=SMC Pentax-F* 300mm F4.5 ED[IF]
+003F>807=SMC Pentax-F* 600mm F4 ED[IF]
+003F>808=SMC Pentax-F macro 100mm F2.8
+003F>809=SMC Pentax-F macro 50mm F2.8
+003F>812=Sigma 18-50mm F3.5-5.6 DC
+003F>814=Sigma APO 70-200mm F2.8 EX
+003F>818=SMC Pentax-FA 28-70mm F4 AL
+003F>819=Sigma 28mm F1.8 EX DG aspherical macro
+003F>820=SMC Pentax-FA 28-200mm F3.8-5.6 AL[IF]
+003F>821=SMC Pentax-FA 28-80mm F3.5-5.6 AL
+003F>1021=SMC Pentax-DA 14mm F2.8 ED[IF]
+003F>1022=SMC Pentax-DA 16-45mm F4 ED AL
+003F>1023=Sigma 18-200mm F3.5-6.3 DC
+003F>1025=SMC Pentax-FA soft 28mm F2.8
+003F>1026=SMC Pentax-FA 80-320mm F4.5-5.6
+003F>1027=SMC Pentax-FA 43mm F1.9 Limited
+003F>1030=SMC Pentax-FA 35-80mm F4-5.6
+003F>1039=SMC Pentax-FA 28-105mm F4-5.6 [IF]
+003F>1043=Tamron SP AF 90mm F2.8
+003F>1044=SMC Pentax-FA 28-80mm F3.5-5.6
+003F>1047=SMC Pentax-FA 20-35mm F4 AL
+003F>1048=SMC Pentax-FA 77mm F1.8 Limited
+003F>1050=SMC Pentax-FA macro 100mm F3.5
+003F>1052=SMC Pentax-FA 35mm F2 AL
+003F>1058=SMC Pentax-FA 24-90mm F3.5-4.5 AL[IF]
+003F>1059=SMC Pentax-FA 100-300mm F4.7-5.8
+003F>1062=SMC Pentax-FA 28-105mm F3.2-4.5 AL[IF]
+003F>1063=SMC Pentax-FA 31mm F1.8AL limited
+003F>1065=Tamron AF 28-200mm super zoom F3.8-5.6 aspherical XR [IF] macro (A03)
+003F>1067=SMC Pentax-FA 28-90mm F3.5-5.6
+003F>1068=SMC Pentax-FA J 75-300mm F4.5-5.8 AL
+003F>1069=Tamron 28-300mm F3.5-6.3 ultra zoom XR
+003F>1070=SMC Pentax-FA J 28-80mm F3.5-5.6 AL
+003F>1071=SMC Pentax-FA J 18-35mm F4-5.6 AL
+003F>1073=Tamron SP AF 28-75mm F2.8 XR Di (A09)
+003F>1271=SMC Pentax-DA 10-17mm F3.5-4.5 ED [IF] fisheye zoom
+003F>1272=SMC Pentax-DA 12-24mm F4 ED AL [IF]
+003F>1274=SMC Pentax-DA 50-200mm F4-5.6 ED
+003F>1275=SMC Pentax-DA 40mm F2.8 Limited
+003F>1276=SMC Pentax-DA 18-55mm F3.5-5.6 AL
+003F>1277=SMC Pentax-DA 14mm F2.8 ED[IF]',
+003F>1278=SMC Pentax-DA 16-45mm F4 ED AL',
+003F>1281=SMC Pentax-FA* 24mm F2 AL[IF]',
+003F>1282=SMC Pentax-FA 28mm F2.8 AL',
+003F>1283=SMC Pentax-FA 50mm F1.7',
+003F>1284=SMC Pentax-FA 50mm F1.4',
+003F>1285=SMC Pentax-FA* 600mm F4 ED[IF]',
+003F>1286=SMC Pentax-FA* 300mm F4.5 ED[IF]',
+003F>1287=SMC Pentax-FA 135mm F2.8 [IF]',
+003F>1288=SMC Pentax-FA macro 50mm F2.8',
+003F>1289=SMC Pentax-FA macro 100mm F2.8',
+003F>1290=SMC Pentax-FA* 85mm F1.4 [IF]',
+003F>1291=SMC Pentax-FA* 200mmF2.8 ED[IF]',
+003F>1292=SMC Pentax-FA 28-80mm F3.5-4.7',
+003F>1293=SMC Pentax-FA 70-200mm F4-5.6',
+003F>1294=SMC Pentax-FA* 250-600mm F5.6 ED[IF]',
+003F>1295=SMC Pentax-FA 28-105mm F4-5.6',
+003F>1296=SMC Pentax-FA 100-300mm F4.5-5.6',
+003F>1537=SMC Pentax-FA* 85mm F1.4[IF]',
+003F>1538=SMC Pentax-FA* 200mm F2.8 ED[IF]',
+003F>1539=SMC Pentax-FA* 300mm F2.8 ED[IF]',
+003F>1540=SMC Pentax-FA* 28-70mm F2.8 AL',
+003F>1541=SMC Pentax-FA* 80-200mm F2.8 ED[IF]',
+003F>1542=SMC Pentax-FA* 28-70mm F2.8 AL',
+003F>1543=SMC Pentax-FA* 80-200mm F2.8 ED[IF]',
+003F>1544=SMC Pentax-FA 28-70mm F4AL',
+003F>1545=SMC Pentax-FA 20mm F2.8',
+003F>1546=SMC Pentax-FA* 400mm F5.6 ED[IF]',
+003F>1549=SMC Pentax-FA* 400mm F5.6 ED[IF]',
+003F>1550=SMC Pentax-FA* macro 200mm F4 ED[IF]',
 
 0200=Black point-X
 0201=White point-X
